force-app/main/default/objects/FF_External_Gains_ISAs__c/FF_External_Gains_ISAs__c.object-meta.xml
<CustomObject>
    <label>FF Gains &amp; ISAs</label>
    <nameField>
        <label>FF External Gains &amp; ISAs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FF Gains &amp; ISAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>