force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Carried_Forward_Losses__c.field-meta.xml
<CustomField>
    <fullName>Carried_Forward_Losses__c</fullName>
    <description>To get extra detail on if a client has any carried forward losses.</description>
    <inlineHelpText>Does not included losses realised in the current tax year</inlineHelpText>
    <label>Carried forward losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>