force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Carried_Forward_Losses_further_detail__c.field-meta.xml
<CustomField>
    <fullName>Carried_Forward_Losses_further_detail__c</fullName>
    <description>A chance to add any further detail required regarding carried forward losses.</description>
    <label>Further detail: carried forward losses</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>