force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/External_Gains_ISAs__c.field-meta.xml
<CustomField>
    <fullName>External_Gains_ISAs__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup relationship to the &apos;Gains &amp; ISA Contributions&apos; object to easily connect the two.</description>
    <label>External gains &amp; ISAs</label>
    <referenceTo>External_Gains_Losses__c</referenceTo>
    <relationshipLabel>FF Gains &amp; ISAs</relationshipLabel>
    <relationshipName>FF_External_Gains_ISAs</relationshipName>
    <type>Lookup</type>
</CustomField>