force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/External_ISA_Contributions__c.field-meta.xml
<CustomField>
    <fullName>External_ISA_Contributions__c</fullName>
    <description>A &apos;Yes&apos; or &apos;No&apos; value depending on if there was external ISA contributions or not.</description>
    <label>External ISA contributions (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>