force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Gains_Losses_further_detail_ext__c.field-meta.xml
<CustomField>
    <fullName>Gains_Losses_further_detail_ext__c</fullName>
    <description>A chance to add any further detail required regarding gains and losses.</description>
    <label>Further detail: gains &amp; losses</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>