force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/gains_losses_realised_this_tax_year__c.field-meta.xml
<CustomField>
    <fullName>gains_losses_realised_this_tax_year__c</fullName>
    <description>A &apos;Yes&apos; or &apos;No&apos; value for if any gains or losses have been realised within this tax year.</description>
    <label>Gains/losses realised this tax year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>