force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Gains_Realised__c.field-meta.xml
<CustomField>
    <fullName>Gains_Realised__c</fullName>
    <description>The amount of gains realised.</description>
    <label>Gains realised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>