force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Gains_Realised_int__c.field-meta.xml
<CustomField>
    <fullName>Gains_Realised_int__c</fullName>
    <description>Value of any gains realised (int).</description>
    <label>Gains realised (int)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>