force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/ISA_Contributions__c.field-meta.xml
<CustomField>
    <fullName>ISA_Contributions__c</fullName>
    <description>The value of any ISA contributions.</description>
    <label>ISA contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>