force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/ISA_contributions_further_detail_ext__c.field-meta.xml
<CustomField>
    <fullName>ISA_contributions_further_detail_ext__c</fullName>
    <description>A chance to add any further detail required regarding ISA contributions.</description>
    <label>Further detail: ISA contributions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>