force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/ISA_Contributions_int__c.field-meta.xml
<CustomField>
    <fullName>ISA_Contributions_int__c</fullName>
    <description>Value of any ISA contributions (int).</description>
    <label>ISA contributions (int)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>