force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Losses_Realised__c.field-meta.xml
<CustomField>
    <fullName>Losses_Realised__c</fullName>
    <description>The value of any losses realised.</description>
    <label>Losses realised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>