force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Losses_Realised_int__c.field-meta.xml
<CustomField>
    <fullName>Losses_Realised_int__c</fullName>
    <description>Value of any losses realised (int).</description>
    <label>Losses realised (int)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>