force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Losses_Realised_Prior_Tax_Years__c.field-meta.xml
<CustomField>
    <fullName>Losses_Realised_Prior_Tax_Years__c</fullName>
    <description>To see if a client has any carried forward losses, the value for this will be either &apos;Yes&apos; or &apos;No&apos;.</description>
    <label>Carried forward losses (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>