force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Match_id__c.field-meta.xml
<CustomField>
    <fullName>Match_id__c</fullName>
    <label>Match id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>