force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/NovaId__c.field-meta.xml
<CustomField>
    <fullName>NovaId__c</fullName>
    <description>This has the ID of the record and will be copied into the OM org to maintain a link back.</description>
    <externalId>true</externalId>
    <label>NOVA ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>