force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <description>This needs to look at the related household to determine if this applies to OM.</description>
    <formula>IF(NOT(ISBLANK(Household__r.OctopusMoneyRecord__c)), CASESAFEID(Household__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM record</label>
    <type>Text</type>
</CustomField>