force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/OW_validation_type__c.field-meta.xml
<CustomField>
    <fullName>OW_validation_type__c</fullName>
    <description>Defines if this was an automatic or manual validation.</description>
    <label>Validation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>