force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FF_External_Gains_ISAs</relationshipName>
    <type>Lookup</type>
</CustomField>