force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>Details of any reasons for rejecting this.</description>
    <label>Reason for rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>