force-app/main/default/objects/FF_External_Gains_ISAs__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <description>Define what the validation status is for this, i.e. has it been overwritten or is this validated?</description>
    <label>Validation status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FF_Validation</valueSetName>
    </valueSet>
</CustomField>